--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -85,6 +85,9 @@
     background-color: transparent;
     border: 0;
 }
+%opaqueBg {
+    background-color: rgba(black, 0.75);
+}
 %boxShadow {
     @include box-shadow(0px 2px 30px rgba(black, 0.7));
 }
