--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -47,7 +47,7 @@
         padding: 15px 6px 15px;
     }
     @include max_tablet{
-        padding: 0 0 15px 15px;
+        padding: 0 0 15px 52px;
     }
     &:hover,
     &:focus {
@@ -80,7 +80,7 @@
         }
     }
     > .container{
-        background-color: rgba(black, 0.65);
+        background-color: rgba(black, 0.75);
     }
 }
 .navbar-nav {
@@ -103,13 +103,11 @@
     @if $use_shadows { @include box-shadow(2px 2px 10px rgba(black, 0.5)); }
 }
 .navbar-collapse {
-    // @include box-shadow(0);
     border-top: 0;
 }
 
 #nav-row{
     height: $nav_height;
-    // background-color: #000;
     z-index: 999;
     position: fixed;
 
@@ -139,8 +137,6 @@ button {
     margin-right: 15px !important;
 }
 .btn-primary {
-    // background-color: $red;
-    // border-color: $red;
     @include transition(background-color, 0.5s);
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
@@ -178,11 +174,9 @@ button {
 
 .footer-widgets {
     .nav {
-        // background-color: #222;
         margin-top: 0px;
     }
     .widget {
-        // background-color: #222;
         border-left: 1px dashed #222;
         padding: 0 23px;
         margin-top: 30px;
@@ -262,7 +256,7 @@ button {
     }
 }
 #footer {
-    background-color: #000;
+    @extend %opaqueBg;
 }
 // @include sticky-footer(300px, "#root", "#root-footer", "#footer");
 
@@ -326,6 +320,6 @@ button {
         padding-left: 15px;
     }
     .navbar-collapse {
-        background-color: #000;
+        @extend %opaqueBg;
     }
 }
