z-index for blossoms on non-thumb pages

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -183,7 +183,7 @@ h1 {
   font-size: 60px;
   margin-bottom: 30px;
   margin-left: -4px;
-  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.6);
+  text-shadow: 0px 1px 5px black;
 }
 @media only all and (max-width: 1199px) {
   /* line 45, ../scss/_typography.scss */
@@ -1243,17 +1243,17 @@ a:hover {
     width: 100% !important;
   }
 }
-/* line 208, ../scss/custom.scss */
+/* line 209, ../scss/custom.scss */
 .thumbnail i {
   color: #bf7485;
 }
-/* line 211, ../scss/custom.scss */
+/* line 212, ../scss/custom.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 220, ../scss/custom.scss */
+  /* line 221, ../scss/custom.scss */
   .thumbnail:hover img {
     border: 3px dotted #b12e4f;
     border-bottom: 3px dotted #b12e4f;
@@ -1267,7 +1267,7 @@ a:hover {
     -o-transition: opacity, 0.5s;
     transition: opacity, 0.5s;
   }
-  /* line 230, ../scss/custom.scss */
+  /* line 231, ../scss/custom.scss */
   .thumbnail:hover h3 {
     background: #b12e4f;
     color: white;
@@ -1281,29 +1281,29 @@ a:hover {
     -o-transition: padding, 0.2s;
     transition: padding, 0.2s;
   }
-  /* line 238, ../scss/custom.scss */
+  /* line 239, ../scss/custom.scss */
   .thumbnail:hover i {
     color: black;
   }
 }
 
-/* line 244, ../scss/custom.scss */
+/* line 245, ../scss/custom.scss */
 .thumb-title {
   min-height: 58px;
 }
 @media only all and (max-width: 320px) {
-  /* line 244, ../scss/custom.scss */
+  /* line 245, ../scss/custom.scss */
   .thumb-title {
     min-height: 35px;
   }
 }
 
-/* line 252, ../scss/custom.scss */
+/* line 253, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
 
-/* line 262, ../scss/custom.scss */
+/* line 263, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1311,35 +1311,35 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 268, ../scss/custom.scss */
+/* line 269, ../scss/custom.scss */
 .visit-site {
   margin: 40px 0;
 }
 
-/* line 272, ../scss/custom.scss */
+/* line 273, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 277, ../scss/custom.scss */
+/* line 278, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 272, ../scss/custom.scss */
+  /* line 273, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 272, ../scss/custom.scss */
+  /* line 273, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 289, ../scss/custom.scss */
+/* line 290, ../scss/custom.scss */
 .portfolio-desc {
   padding: 15px 0 45px 0;
 }
@@ -1347,16 +1347,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 298, ../scss/custom.scss */
+/* line 299, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 302, ../scss/custom.scss */
+/* line 303, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 305, ../scss/custom.scss */
+/* line 306, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1365,7 +1365,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 310, ../scss/custom.scss */
+/* line 311, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1375,7 +1375,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 317, ../scss/custom.scss */
+/* line 318, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1384,44 +1384,45 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 327, ../scss/custom.scss */
+  /* line 328, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 332, ../scss/custom.scss */
+/* line 333, ../scss/custom.scss */
 .ktext {
-  line-height: 19px !important;
+  line-height: 21px !important;
   margin: 15px 0 !important;
+  color: #999 !important;
 }
 
 /* 
  *  Contact Form 
  */
-/* line 343, ../scss/custom.scss */
+/* line 345, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 346, ../scss/custom.scss */
+/* line 348, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
-  color: #2ea2cc;
+  color: #b12e4f;
 }
 
-/* line 352, ../scss/custom.scss */
+/* line 354, ../scss/custom.scss */
 #frmCSCF .btn {
-  border: #bf7485;
-  background-color: #bf7485;
+  border: #b12e4f;
+  background-color: #b12e4f;
   color: white;
   -webkit-transition: background-color, 0.25s;
   -moz-transition: background-color, 0.25s;
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 357, ../scss/custom.scss */
+/* line 359, ../scss/custom.scss */
 #frmCSCF .btn:hover {
-  background-color: #2ea2cc;
+  background-color: #bf7485;
   -webkit-transition: background-color, 0.25s;
   -moz-transition: background-color, 0.25s;
   -o-transition: background-color, 0.25s;
@@ -1431,182 +1432,188 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 368, ../scss/custom.scss */
+/* line 370, ../scss/custom.scss */
 .mq-list {
   padding-top: 30px;
 }
-/* line 370, ../scss/custom.scss */
+/* line 372, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 370, ../scss/custom.scss */
+  /* line 372, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 370, ../scss/custom.scss */
+  /* line 372, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 370, ../scss/custom.scss */
+  /* line 372, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 385, ../scss/custom.scss */
+/* line 387, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 385, ../scss/custom.scss */
+  /* line 387, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 385, ../scss/custom.scss */
+  /* line 387, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 394, ../scss/custom.scss */
+/* line 396, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 394, ../scss/custom.scss */
+  /* line 396, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 400, ../scss/custom.scss */
+/* line 402, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 403, ../scss/custom.scss */
+/* line 405, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 410, ../scss/custom.scss */
+/* line 412, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
+  text-shadow: 0px 1px 5px black;
 }
-/* line 413, ../scss/custom.scss */
+/* line 416, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 420, ../scss/custom.scss */
+/* line 423, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 426, ../scss/custom.scss */
+  /* line 429, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 432, ../scss/custom.scss */
+/* line 435, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 436, ../scss/custom.scss */
+/* line 439, ../scss/custom.scss */
 .media p {
   margin: 0;
 }
-/* line 439, ../scss/custom.scss */
+/* line 442, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 443, ../scss/custom.scss */
+/* line 446, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 448, ../scss/custom.scss */
+/* line 451, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
 
-/* line 456, ../scss/custom.scss */
+/* line 459, ../scss/custom.scss */
 .hero-right {
   margin-bottom: 40px;
 }
 
-/* line 460, ../scss/custom.scss */
+/* line 463, ../scss/custom.scss */
 .col-page-left {
   padding: 0 40px 0 0;
 }
 
-/* line 463, ../scss/custom.scss */
+/* line 466, ../scss/custom.scss */
 .above-header {
   overflow: visible;
   height: 500px;
 }
-/* line 467, ../scss/custom.scss */
+/* line 470, ../scss/custom.scss */
 .above-header h1 {
   margin-top: 50px;
   font-size: 80px;
   z-index: 999;
 }
 @media only all and (max-width: 1199px) {
-  /* line 467, ../scss/custom.scss */
+  /* line 470, ../scss/custom.scss */
   .above-header h1 {
     font-size: 70px;
   }
 }
 @media only all and (max-width: 1199px) {
-  /* line 467, ../scss/custom.scss */
+  /* line 470, ../scss/custom.scss */
   .above-header h1 {
     font-size: 65px;
   }
 }
 
-/* line 479, ../scss/custom.scss */
+/* line 482, ../scss/custom.scss */
 #above-header-container {
   height: 100%;
 }
 
-/* line 483, ../scss/custom.scss */
+/* line 486, ../scss/custom.scss */
 #cherry-blossoms {
   width: 100%;
   height: auto;
   pointer-events: none;
+  z-index: 21;
 }
 
-/* line 488, ../scss/custom.scss */
+/* line 493, ../scss/custom.scss */
+.home #cherry-blossoms, .blog #cherry-blossoms, .page-id-21 #cherry-blossoms {
+  z-index: -1;
+}
+
+/* line 497, ../scss/custom.scss */
 #cb-a {
   background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom.png?1388933978');
   background-position: -360px 100px;
   background-repeat: no-repeat;
   height: 1100px;
   width: 100%;
-  z-index: 21;
 }
 @media only all and (max-width: 1199px) {
-  /* line 488, ../scss/custom.scss */
+  /* line 497, ../scss/custom.scss */
   #cb-a {
     background-position: -550px 100px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 488, ../scss/custom.scss */
+  /* line 497, ../scss/custom.scss */
   #cb-a {
     background-position: -730px 100px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 488, ../scss/custom.scss */
+  /* line 497, ../scss/custom.scss */
   #cb-a {
     background-position: -900px -510px;
     z-index: -1;
@@ -1616,7 +1623,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 515, ../scss/custom.scss */
+/* line 523, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
