z-index for blossoms on non-thumb pages

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1407,7 +1407,7 @@ a:hover {
 /* line 348, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
-  color: #b12e4f;
+  color: #bf7485;
 }
 
 /* line 354, ../scss/custom.scss */
