--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -347,7 +347,7 @@ $thumb_hover: $red;
     }
     label {
         margin-bottom: 10px;
-        color: $red;
+        color: $blue;
     }
 }
 #frmCSCF {
