mailing list footer btn hover

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -629,7 +629,7 @@ button {
 }
 /* line 302, ../scss/_navbar.scss */
 #mc_signup_submit:hover {
-  background-color: #541625;
+  background-color: #bf7485;
   -webkit-transition: background-color, 0.25s;
   -moz-transition: background-color, 0.25s;
   -o-transition: background-color, 0.25s;
