--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -132,7 +132,7 @@ code, pre, .highlight {
 }
 
 /* line 88, ../scss/_mixins.scss */
-#footer {
+#footer, .main-content > .container {
   background-color: rgba(0, 0, 0, 0.75);
 }
 
@@ -739,7 +739,7 @@ code, pre, .highlight {
 }
 
 /* line 88, ../scss/_mixins.scss */
-#footer {
+#footer, .main-content > .container {
   background-color: rgba(0, 0, 0, 0.75);
 }
 
@@ -1128,31 +1128,48 @@ a:hover {
     padding-top: 0px;
   }
 }
+/* line 112, ../scss/custom.scss */
+.main-content > .container {
+  padding-top: 15px;
+}
+@media only all and (max-width: 767px) {
+  /* line 112, ../scss/custom.scss */
+  .main-content > .container {
+    background-color: transparent;
+  }
+}
 
-/* line 113, ../scss/custom.scss */
+@media only all and (max-width: 767px) {
+  /* line 121, ../scss/custom.scss */
+  .main-content-inner .col-sm-6 {
+    padding: 0;
+  }
+}
+
+/* line 128, ../scss/custom.scss */
 .content {
   margin-left: 15px;
   margin-right: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 113, ../scss/custom.scss */
+  /* line 128, ../scss/custom.scss */
   .content {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
-/* line 124, ../scss/custom.scss */
+/* line 139, ../scss/custom.scss */
 .image img {
   width: 100% !important;
   height: auto !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 121, ../scss/custom.scss */
+  /* line 136, ../scss/custom.scss */
   .image {
     width: 100%;
   }
-  /* line 131, ../scss/custom.scss */
+  /* line 146, ../scss/custom.scss */
   .image img {
     width: 100% !important;
   }
@@ -1161,18 +1178,18 @@ a:hover {
 /* 
  *  Sidebar
  */
-/* line 143, ../scss/custom.scss */
+/* line 158, ../scss/custom.scss */
 .sidebar {
   padding: 20px;
   margin-top: 20px;
   background-color: black;
 }
-/* line 149, ../scss/custom.scss */
+/* line 164, ../scss/custom.scss */
 .sidebar h3 {
   padding: 0 0 10px;
   margin: 0 !important;
 }
-/* line 153, ../scss/custom.scss */
+/* line 168, ../scss/custom.scss */
 .sidebar .nav > li > a {
   padding: 10px 0;
 }
@@ -1180,13 +1197,13 @@ a:hover {
 /* 
  *  Thumbnails
  */
-/* line 164, ../scss/custom.scss */
+/* line 179, ../scss/custom.scss */
 .row-thumbnails {
   margin-left: -15px;
   margin-right: -15px;
 }
 @media only all and (max-width: 369px) {
-  /* line 168, ../scss/custom.scss */
+  /* line 183, ../scss/custom.scss */
   .row-thumbnails li {
     width: 100% !important;
     clear: both;
@@ -1194,7 +1211,7 @@ a:hover {
   }
 }
 
-/* line 180, ../scss/custom.scss */
+/* line 195, ../scss/custom.scss */
 .thumbnail {
   padding: 0;
   margin-bottom: 1%;
@@ -1203,7 +1220,7 @@ a:hover {
   -o-transition: all, 0s;
   transition: all, 0s;
 }
-/* line 187, ../scss/custom.scss */
+/* line 202, ../scss/custom.scss */
 .thumbnail h3 {
   -webkit-transition: background-color, 1s;
   -moz-transition: background-color, 1s;
@@ -1216,7 +1233,7 @@ a:hover {
   font-family: "Dosis", sans-serif !important;
   background-color: rgba(255, 255, 255, 0.2);
 }
-/* line 193, ../scss/custom.scss */
+/* line 208, ../scss/custom.scss */
 .thumbnail img {
   height: auto !important;
   border: 3px dotted #ccc;
@@ -1235,7 +1252,7 @@ a:hover {
   transition: border, 1s;
 }
 @media only all and (max-width: 767px) {
-  /* line 193, ../scss/custom.scss */
+  /* line 208, ../scss/custom.scss */
   .thumbnail img {
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
     opacity: 1;
@@ -1243,17 +1260,17 @@ a:hover {
     width: 100% !important;
   }
 }
-/* line 209, ../scss/custom.scss */
+/* line 224, ../scss/custom.scss */
 .thumbnail i {
   color: #bf7485;
 }
-/* line 212, ../scss/custom.scss */
+/* line 227, ../scss/custom.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 221, ../scss/custom.scss */
+  /* line 236, ../scss/custom.scss */
   .thumbnail:hover img {
     border: 3px dotted #b12e4f;
     border-bottom: 3px dotted #b12e4f;
@@ -1267,7 +1284,7 @@ a:hover {
     -o-transition: opacity, 0.5s;
     transition: opacity, 0.5s;
   }
-  /* line 231, ../scss/custom.scss */
+  /* line 246, ../scss/custom.scss */
   .thumbnail:hover h3 {
     background: #b12e4f;
     color: white;
@@ -1281,29 +1298,29 @@ a:hover {
     -o-transition: padding, 0.2s;
     transition: padding, 0.2s;
   }
-  /* line 239, ../scss/custom.scss */
+  /* line 254, ../scss/custom.scss */
   .thumbnail:hover i {
     color: black;
   }
 }
 
-/* line 245, ../scss/custom.scss */
+/* line 260, ../scss/custom.scss */
 .thumb-title {
   min-height: 58px;
 }
 @media only all and (max-width: 320px) {
-  /* line 245, ../scss/custom.scss */
+  /* line 260, ../scss/custom.scss */
   .thumb-title {
     min-height: 35px;
   }
 }
 
-/* line 253, ../scss/custom.scss */
+/* line 268, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
 
-/* line 263, ../scss/custom.scss */
+/* line 278, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1311,35 +1328,35 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 269, ../scss/custom.scss */
+/* line 284, ../scss/custom.scss */
 .visit-site {
   margin: 40px 0;
 }
 
-/* line 273, ../scss/custom.scss */
+/* line 288, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 278, ../scss/custom.scss */
+/* line 293, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 273, ../scss/custom.scss */
+  /* line 288, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 273, ../scss/custom.scss */
+  /* line 288, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 290, ../scss/custom.scss */
+/* line 305, ../scss/custom.scss */
 .portfolio-desc {
   padding: 15px 0 45px 0;
 }
@@ -1347,16 +1364,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 299, ../scss/custom.scss */
+/* line 314, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 303, ../scss/custom.scss */
+/* line 318, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 306, ../scss/custom.scss */
+/* line 321, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1365,7 +1382,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 311, ../scss/custom.scss */
+/* line 326, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1375,7 +1392,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 318, ../scss/custom.scss */
+/* line 333, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1384,13 +1401,13 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 328, ../scss/custom.scss */
+  /* line 343, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 333, ../scss/custom.scss */
+/* line 348, ../scss/custom.scss */
 .ktext {
   line-height: 21px !important;
   margin: 15px 0 !important;
@@ -1400,17 +1417,17 @@ a:hover {
 /* 
  *  Contact Form 
  */
-/* line 345, ../scss/custom.scss */
+/* line 360, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 348, ../scss/custom.scss */
+/* line 363, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #bf7485;
 }
 
-/* line 354, ../scss/custom.scss */
+/* line 369, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #b12e4f;
   background-color: #b12e4f;
@@ -1420,7 +1437,7 @@ a:hover {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 359, ../scss/custom.scss */
+/* line 374, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #bf7485;
   -webkit-transition: background-color, 0.25s;
@@ -1432,154 +1449,165 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 370, ../scss/custom.scss */
+/* line 385, ../scss/custom.scss */
 .mq-list {
   padding-top: 30px;
 }
-/* line 372, ../scss/custom.scss */
+/* line 387, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 372, ../scss/custom.scss */
+  /* line 387, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 372, ../scss/custom.scss */
+  /* line 387, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 372, ../scss/custom.scss */
+  /* line 387, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 387, ../scss/custom.scss */
+/* line 402, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 387, ../scss/custom.scss */
+  /* line 402, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 387, ../scss/custom.scss */
+  /* line 402, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 396, ../scss/custom.scss */
+/* line 411, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 396, ../scss/custom.scss */
+  /* line 411, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 402, ../scss/custom.scss */
+/* line 417, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 405, ../scss/custom.scss */
+/* line 420, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 412, ../scss/custom.scss */
+/* line 427, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
-  text-shadow: 0px 1px 5px black;
 }
-/* line 416, ../scss/custom.scss */
+/* line 431, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 423, ../scss/custom.scss */
+/* line 438, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 429, ../scss/custom.scss */
+  /* line 444, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 435, ../scss/custom.scss */
+/* line 450, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 439, ../scss/custom.scss */
+/* line 454, ../scss/custom.scss */
 .media p {
   margin: 0;
 }
-/* line 442, ../scss/custom.scss */
+/* line 457, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 446, ../scss/custom.scss */
+/* line 461, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 451, ../scss/custom.scss */
+/* line 466, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
 
-/* line 459, ../scss/custom.scss */
+/* line 474, ../scss/custom.scss */
 .hero-right {
   margin-bottom: 40px;
 }
+@media only all and (max-width: 767px) {
+  /* line 474, ../scss/custom.scss */
+  .hero-right {
+    margin-bottom: 0;
+  }
+}
 
-/* line 463, ../scss/custom.scss */
+/* line 481, ../scss/custom.scss */
 .col-page-left {
   padding: 0 40px 0 0;
 }
+@media only all and (max-width: 767px) {
+  /* line 481, ../scss/custom.scss */
+  .col-page-left {
+    padding: 0;
+  }
+}
 
-/* line 466, ../scss/custom.scss */
+/* line 487, ../scss/custom.scss */
 .above-header {
   overflow: visible;
   height: 500px;
 }
-/* line 470, ../scss/custom.scss */
+/* line 491, ../scss/custom.scss */
 .above-header h1 {
   margin-top: 50px;
   font-size: 80px;
   z-index: 999;
 }
 @media only all and (max-width: 1199px) {
-  /* line 470, ../scss/custom.scss */
+  /* line 491, ../scss/custom.scss */
   .above-header h1 {
     font-size: 70px;
   }
 }
 @media only all and (max-width: 1199px) {
-  /* line 470, ../scss/custom.scss */
+  /* line 491, ../scss/custom.scss */
   .above-header h1 {
     font-size: 65px;
   }
 }
 
-/* line 482, ../scss/custom.scss */
+/* line 503, ../scss/custom.scss */
 #above-header-container {
   height: 100%;
 }
 
-/* line 486, ../scss/custom.scss */
+/* line 507, ../scss/custom.scss */
 #cherry-blossoms {
   width: 100%;
   height: auto;
@@ -1587,12 +1615,12 @@ a:hover {
   z-index: 21;
 }
 
-/* line 493, ../scss/custom.scss */
+/* line 514, ../scss/custom.scss */
 .home #cherry-blossoms, .blog #cherry-blossoms, .page-id-21 #cherry-blossoms {
   z-index: -1;
 }
 
-/* line 497, ../scss/custom.scss */
+/* line 518, ../scss/custom.scss */
 #cb-a {
   background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom.png?1388933978');
   background-position: -360px 100px;
@@ -1601,19 +1629,19 @@ a:hover {
   width: 100%;
 }
 @media only all and (max-width: 1199px) {
-  /* line 497, ../scss/custom.scss */
+  /* line 518, ../scss/custom.scss */
   #cb-a {
     background-position: -550px 100px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 497, ../scss/custom.scss */
+  /* line 518, ../scss/custom.scss */
   #cb-a {
     background-position: -730px 100px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 497, ../scss/custom.scss */
+  /* line 518, ../scss/custom.scss */
   #cb-a {
     background-position: -900px -510px;
     z-index: -1;
@@ -1623,7 +1651,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 523, ../scss/custom.scss */
+/* line 544, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
