--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -521,24 +521,28 @@ $thumb_hover: $red;
         z-index: -1;
     }
 }
+#cherry-blossoms{
+    @include max_tablet{
+        z-index: -1;
+    }
+}
 #cb-a{
 
     @include background(image-url("cherry-blossom.png"));
-    background-position: -360px 100px;
+    // background-position: -310px 100px;
     background-repeat: no-repeat;
     height: 1100px;
     width: 100%;
 
     @include max_desktop{
-        background-position: -550px 100px;
+        background-position: -330px 100px;
     }
     @include max_laptop{
-        background-position: -730px 100px;
+        background-position: -620px 100px;
     }
     @include max_tablet{
         // width: 100%;
-        background-position: -900px -510px;
-        z-index: -1;
+        background-position: -900px -490px;
     }
 }
 
