--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -529,7 +529,7 @@ $thumb_hover: $red;
 #cb-a{
 
     @include background(image-url("cherry-blossom.png"));
-    // background-position: -310px 100px;
+    background-position: -330px 100px;
     background-repeat: no-repeat;
     height: 1100px;
     width: 100%;
