nav-collapse mobile bgc opac

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -321,5 +321,8 @@ button {
     }
     .navbar-collapse {
         background-color: rgba(black, 0.75);
+        @include max_tablet{
+            background-color: rgba(0, 0, 0, 0.15);
+        }
     }
 }
