--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -659,6 +659,13 @@ button {
     background-color: rgba(0, 0, 0, 0.75);
   }
 }
+@media only all and (max-width: 767px) and (max-width: 767px) {
+  /* line 322, ../scss/_navbar.scss */
+  .navbar-collapse {
+    background-color: rgba(0, 0, 0, 0.15);
+  }
+}
+
 /*
  * 	Mixins
  */
