blossom opac mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1643,6 +1643,8 @@ a:hover {
   /* line 524, ../scss/custom.scss */
   #cherry-blossoms {
     z-index: -1;
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=30);
+    opacity: 0.3;
   }
 }
 
