--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -524,7 +524,7 @@ $thumb_hover: $red;
 #cherry-blossoms{
     @include max_tablet{
         z-index: -1;
-        // @include opacity(0.7);
+        @include opacity(0.3);
     }
 }
 #cb-a{
