brand line-height mobile

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -11,6 +11,7 @@
     }
     @include max_tablet {
         padding-top: 12px;
+        line-height: 25px;
 
         #avatar {
             width:  24px;   
