--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -288,20 +288,21 @@ p {
   /* line 7, ../scss/_navbar.scss */
   .navbar-brand {
     padding-top: 12px;
+    line-height: 25px;
   }
-  /* line 15, ../scss/_navbar.scss */
+  /* line 16, ../scss/_navbar.scss */
   .navbar-brand #avatar {
     width: 24px;
     height: 24px;
   }
 }
 
-/* line 21, ../scss/_navbar.scss */
+/* line 22, ../scss/_navbar.scss */
 .navbar-inverse .navbar-brand {
   color: white;
 }
 
-/* line 25, ../scss/_navbar.scss */
+/* line 26, ../scss/_navbar.scss */
 .site-navigation-inner {
   padding-left: 0;
   padding-right: 0;
@@ -310,36 +311,36 @@ p {
 }
 
 @media only all and (max-width: 767px) {
-  /* line 32, ../scss/_navbar.scss */
+  /* line 33, ../scss/_navbar.scss */
   .navbar-fixed-top {
     position: relative;
   }
 }
 
 /* Nav */
-/* line 41, ../scss/_navbar.scss */
+/* line 42, ../scss/_navbar.scss */
 .nav > li > a {
   padding: 15px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 41, ../scss/_navbar.scss */
+  /* line 42, ../scss/_navbar.scss */
   .nav > li > a {
     padding: 15px 11px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 41, ../scss/_navbar.scss */
+  /* line 42, ../scss/_navbar.scss */
   .nav > li > a {
     padding: 15px 6px 15px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 41, ../scss/_navbar.scss */
+  /* line 42, ../scss/_navbar.scss */
   .nav > li > a {
     padding: 0 0 15px 52px;
   }
 }
-/* line 53, ../scss/_navbar.scss */
+/* line 54, ../scss/_navbar.scss */
 .nav > li > a:hover, .nav > li > a:focus {
   background-color: transparent;
 }
@@ -347,25 +348,25 @@ p {
 /* 
  *   Navbar 
  */
-/* line 65, ../scss/_navbar.scss */
+/* line 66, ../scss/_navbar.scss */
 .navbar {
   font-family: "Dosis", sans-serif;
   text-transform: uppercase;
 }
-/* line 70, ../scss/_navbar.scss */
+/* line 71, ../scss/_navbar.scss */
 .navbar a {
   font-size: 16px;
   letter-spacing: 3px;
 }
 @media only all and (min-width: 768px) and (max-width: 991px) {
-  /* line 70, ../scss/_navbar.scss */
+  /* line 71, ../scss/_navbar.scss */
   .navbar a {
     font-size: 13px;
     letter-spacing: 2px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 70, ../scss/_navbar.scss */
+  /* line 71, ../scss/_navbar.scss */
   .navbar a {
     -webkit-transition: all, 0;
     -moz-transition: all, 0;
@@ -373,12 +374,12 @@ p {
     transition: all, 0;
   }
 }
-/* line 82, ../scss/_navbar.scss */
+/* line 83, ../scss/_navbar.scss */
 .navbar > .container {
   background-color: rgba(0, 0, 0, 0.75);
 }
 
-/* line 86, ../scss/_navbar.scss */
+/* line 87, ../scss/_navbar.scss */
 .navbar-nav {
   margin: 0 0 0 -15px;
 }
@@ -386,7 +387,7 @@ p {
 /* 
  *  Active 
  */
-/* line 96, ../scss/_navbar.scss */
+/* line 97, ../scss/_navbar.scss */
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
@@ -394,45 +395,45 @@ p {
   color: #bf7485;
 }
 
-/* line 100, ../scss/_navbar.scss */
+/* line 101, ../scss/_navbar.scss */
 .navbar-inverse {
   background-color: transparent;
   border: 0;
 }
 
-/* line 105, ../scss/_navbar.scss */
+/* line 106, ../scss/_navbar.scss */
 .navbar-collapse {
   border-top: 0;
 }
 
-/* line 109, ../scss/_navbar.scss */
+/* line 110, ../scss/_navbar.scss */
 #nav-row {
   height: 50px;
   z-index: 999;
   position: fixed;
 }
 
-/* line 119, ../scss/_navbar.scss */
+/* line 120, ../scss/_navbar.scss */
 #nav-below .btn {
   margin-top: 20px;
 }
-/* line 122, ../scss/_navbar.scss */
+/* line 123, ../scss/_navbar.scss */
 #nav-below .btn-primary {
   margin-top: 10px;
 }
 
-/* line 129, ../scss/_navbar.scss */
+/* line 130, ../scss/_navbar.scss */
 .nav-previous {
   float: left;
   margin-right: 10px;
 }
 
-/* line 136, ../scss/_navbar.scss */
+/* line 137, ../scss/_navbar.scss */
 button {
   margin-right: 15px !important;
 }
 
-/* line 139, ../scss/_navbar.scss */
+/* line 140, ../scss/_navbar.scss */
 .btn-primary {
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
@@ -440,7 +441,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 142, ../scss/_navbar.scss */
+/* line 143, ../scss/_navbar.scss */
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
   background-color: #a54c60;
   border-color: #a54c60;
@@ -450,7 +451,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 148, ../scss/_navbar.scss */
+/* line 149, ../scss/_navbar.scss */
 .btn-danger {
   background-color: #b12e4f;
   border-color: #b12e4f;
@@ -460,7 +461,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 153, ../scss/_navbar.scss */
+/* line 154, ../scss/_navbar.scss */
 .btn-danger:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
   background-color: #541625;
   border-color: #541625;
@@ -470,35 +471,35 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 161, ../scss/_navbar.scss */
+/* line 162, ../scss/_navbar.scss */
 .affix {
   top: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 161, ../scss/_navbar.scss */
+  /* line 162, ../scss/_navbar.scss */
   .affix {
     position: static;
   }
 }
 
 @media only all and (max-width: 767px) {
-  /* line 167, ../scss/_navbar.scss */
+  /* line 168, ../scss/_navbar.scss */
   .affix-top {
     position: static;
   }
 }
 
-/* line 176, ../scss/_navbar.scss */
+/* line 177, ../scss/_navbar.scss */
 .footer-widgets .nav {
   margin-top: 0px;
 }
-/* line 179, ../scss/_navbar.scss */
+/* line 180, ../scss/_navbar.scss */
 .footer-widgets .widget {
   border-left: 1px dashed #222;
   padding: 0 23px;
   margin-top: 30px;
 }
-/* line 183, ../scss/_navbar.scss */
+/* line 184, ../scss/_navbar.scss */
 .footer-widgets .widget h2 {
   font-family: "Dosis", sans-serif !important;
   font-size: 110%;
@@ -507,31 +508,31 @@ button {
   letter-spacing: 3px;
 }
 @media only all and (max-width: 767px) {
-  /* line 179, ../scss/_navbar.scss */
+  /* line 180, ../scss/_navbar.scss */
   .footer-widgets .widget {
     padding: 0;
     margin-top: 30px;
     border-left: 0;
   }
 }
-/* line 196, ../scss/_navbar.scss */
+/* line 197, ../scss/_navbar.scss */
 .footer-widgets .widget:first-child {
   border-left: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 199, ../scss/_navbar.scss */
+  /* line 200, ../scss/_navbar.scss */
   .footer-widgets .widget:last-child {
     padding: 0;
     margin-top: 0;
   }
 }
-/* line 206, ../scss/_navbar.scss */
+/* line 207, ../scss/_navbar.scss */
 .footer-widgets ul {
   padding: 0;
   list-style: none;
   list-style-type: none;
 }
-/* line 211, ../scss/_navbar.scss */
+/* line 212, ../scss/_navbar.scss */
 .footer-widgets .menu-item {
   margin: 3px 0;
   text-transform: uppercase;
@@ -543,7 +544,7 @@ button {
       }
   } */
 }
-/* line 216, ../scss/_navbar.scss */
+/* line 217, ../scss/_navbar.scss */
 .footer-widgets .menu-item:before {
   margin-left: 10px;
   margin-right: 5px;
@@ -551,34 +552,34 @@ button {
   color: #b12e4f;
 }
 
-/* line 231, ../scss/_navbar.scss */
+/* line 232, ../scss/_navbar.scss */
 #calendar_wrap {
   padding: 0;
 }
-/* line 235, ../scss/_navbar.scss */
+/* line 236, ../scss/_navbar.scss */
 #calendar_wrap .table-striped > tbody > tr:nth-child(odd) > td, #calendar_wrap .table-striped > tbody > tr:nth-child(odd) > th {
   background-color: #222;
 }
-/* line 238, ../scss/_navbar.scss */
+/* line 239, ../scss/_navbar.scss */
 #calendar_wrap .table > thead > tr > th, #calendar_wrap .table > tbody > tr > th, #calendar_wrap .table > tfoot > tr > th, #calendar_wrap .table > thead > tr > td, #calendar_wrap .table > tbody > tr > td, #calendar_wrap .table > tfoot > tr > td {
   border-top: 1px solid #444;
 }
-/* line 241, ../scss/_navbar.scss */
+/* line 242, ../scss/_navbar.scss */
 #calendar_wrap caption {
   color: #bf7485;
   margin-bottom: 10px;
 }
 
-/* line 248, ../scss/_navbar.scss */
+/* line 249, ../scss/_navbar.scss */
 #footer-menu li {
   width: 100%;
 }
 
-/* line 252, ../scss/_navbar.scss */
+/* line 253, ../scss/_navbar.scss */
 #root-footer, #footer {
   height: auto;
 }
-/* line 254, ../scss/_navbar.scss */
+/* line 255, ../scss/_navbar.scss */
 #root-footer p, #footer p {
   color: #666;
 }
@@ -586,7 +587,7 @@ button {
 /* 
  *  Kebo Tweets
  */
-/* line 271, ../scss/_navbar.scss */
+/* line 272, ../scss/_navbar.scss */
 .kebo-tweets a.kaccount, .kebo-tweets a.kdate {
   font-size: 96% !important;
 }
@@ -594,21 +595,21 @@ button {
 /*  
  *  Mailchimp Email Signup 
  */
-/* line 282, ../scss/_navbar.scss */
+/* line 283, ../scss/_navbar.scss */
 #mc_signup {
   padding: 0 !important;
 }
-/* line 284, ../scss/_navbar.scss */
+/* line 285, ../scss/_navbar.scss */
 #mc_signup .mergeRow {
   display: none !important;
   padding: 0 !important;
 }
-/* line 288, ../scss/_navbar.scss */
+/* line 289, ../scss/_navbar.scss */
 #mc_signup form {
   padding: 0 !important;
 }
 
-/* line 292, ../scss/_navbar.scss */
+/* line 293, ../scss/_navbar.scss */
 #mc_signup_submit {
   margin-top: 0;
   width: 100% !important;
@@ -627,7 +628,7 @@ button {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 302, ../scss/_navbar.scss */
+/* line 303, ../scss/_navbar.scss */
 #mc_signup_submit:hover {
   background-color: #bf7485;
   -webkit-transition: background-color, 0.25s;
@@ -636,12 +637,12 @@ button {
   transition: background-color, 0.25s;
 }
 
-/* line 307, ../scss/_navbar.scss */
+/* line 308, ../scss/_navbar.scss */
 .mc_success_msg {
   color: #bf7485;
 }
 
-/* line 310, ../scss/_navbar.scss */
+/* line 311, ../scss/_navbar.scss */
 #mc_message {
   margin-bottom: 15px;
   margin-top: -2px;
@@ -649,18 +650,18 @@ button {
 
 @media only all and (max-width: 767px) {
   /* Logo */
-  /* line 319, ../scss/_navbar.scss */
+  /* line 320, ../scss/_navbar.scss */
   .navbar-brand {
     padding-left: 15px;
   }
 
-  /* line 322, ../scss/_navbar.scss */
+  /* line 323, ../scss/_navbar.scss */
   .navbar-collapse {
     background-color: rgba(0, 0, 0, 0.75);
   }
 }
 @media only all and (max-width: 767px) and (max-width: 767px) {
-  /* line 322, ../scss/_navbar.scss */
+  /* line 323, ../scss/_navbar.scss */
   .navbar-collapse {
     background-color: rgba(0, 0, 0, 0.15);
   }
