--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -220,12 +220,12 @@ button {
             content: "\00bb ";
             color: $red;
         }
-        /* a {
-            color: #666;
+        a {
+            color: $red;
             &:hover {
                 color: $blue;
             }
-        } */
+        }
     }
 }
 
