--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -222,7 +222,7 @@ button {
         }
         a {
             color: $blue;
-            &:hover {
+            &:hover, &:focus {
                 color: $red;
             }
         }
